update screenshot readme

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<nav class="navbar navbar-primary" role="navigation">
 				<div class="navbar-form navbar-left" role="search">
 				  	<div class="form-group">
-				    	<input id="n" type="text" class="form-control" placeholder="n">
+				    	<input id="n" type="number" class="form-control" placeholder="请输入每行的字数">
 				  	</div>
 				  	<button id="submit" class="btn btn-primary">去除</button>
 				</div>
