--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
 			<nav class="navbar navbar-primary" role="navigation">
 				<div class="navbar-form navbar-left" role="search">
 				  	<div class="form-group">
-				    	<input id="n" type="text" class="form-control" placeholder="n">
+				    	<input id="n" type="number" class="form-control" placeholder="请输入字数n">
 				  	</div>
 				  	<button id="submit" class="btn btn-primary">去除</button>
+				  	<span class="alert-info">所有字数大于n的行，其换行符都会被去掉。</span>
 				</div>
+
 			</nav>	
 		</div>
-			
 		<div class="row"> 
 			
 			<div class="col-md-6">
